# powerpulse

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build-linux.yml  build-windows.yml
cpp/: powerpulse.cpp
powerpulse/: __init__.py  battery.py  cli.py  database.py  gui.py  notification.py  stats.py  utils.py
scripts/: build_executables.py  install_linux.sh  install_windows.bat
src/: battery_monitor.rs  database.rs  gui.rs  main.rs  notification.rs
