toml
[package]
name = "powerpulse"
version = "0.1.0"
edition = "2021"
authors = ["Naveen Vasudevan <naveenovan@gmail.com>"]
description = "A lightweight battery monitoring tool"
license = "MIT"
repository = "https://github.com/kuroonai/powerpulse"
readme = "README.md"
keywords = ["battery", "monitoring", "system", "utility"]
categories = ["command-line-utilities", "system"]

# [existing dependencies remain the same]