[package]
name = "powerpulse"
version = "0.1.0"
edition = "2021"

[dependencies]
battery = "0.7.8"       # For battery monitoring
chrono = "0.4"          # For timestamps
serde = { version = "1.0", features = ["derive"] } # For serialization
serde_json = "1.0"      # For JSON handling
rusqlite = { version = "0.29.0", features = ["bundled"] } # SQLite for data storage
clap = { version = "4.4", features = ["derive"] } # For CLI args
notify-rust = "4.9"     # For desktop notifications
eframe = "0.23.0"  # egui framework
egui_plot = "0.23.0"  # For battery graphs